# ssdp_prober

./: .travis.yml  CMakeLists.txt  README.md  main.cpp
test/: CMakeLists.txt  client.cpp  server.cpp
